src/sass/_interviews.scss
.interviews {
	.interview:first-child {
		margin-top: 20px;
	}

	.interview:last-child {
		margin-bottom: 20px;
	}
}

.interview {
	background: white;
	overflow: hidden;
	margin-bottom: 20px;
	padding: 15px;
}

.interview--expandable {
	cursor: pointer;
}

.interview__body {
    color: $textgrey;
	float: left;
	width: calc(100% - 130px);
}

.interview__interviewee {
    border-radius: 38px;
	float: left;
	margin-right: 20px;
    width: 75px;
}

.interview__quote {
	font-size: 19px;
	margin-bottom: 20px;
	margin-right: 25px;
}

.interview__name,
.interview__location {
	font-family: SkyTextMedium;
}

.interview__name {
	color: $textColour;
}

.interview__videos {
	float: left;
	width: 100%;
	margin-top: 20px;

	&:empty {
		margin: 0;
	}

	.videos .video__spacer {
		width: 0;
	}

	.videos__thumbnail-wrapper {
		text-align: center;
	    width: 90px;
	}
	.videos__thumbnail {
	    border-radius: 25px;
	    width: 50px;
	}

	@media (min-width: 769px) {

	    .videos__thumbnail-wrapper {
	        // width: 156px;
	    }

	    .videos__thumbnail {
	        border-radius: 38px;
	        width: 75px;
	    }
	}
}

.interview__button {
	float: right;
	height: 10px;
	width: 20px;
}

.interview__text {
	color: $textgrey;
	float: left;
	margin-left: 90px;
	margin-top: 20px;
}

.interview .share__list{
	margin-top: 10px;
}


@media (min-width: 769px) {
	.interview__quote {
		font-size: 23px;
		margin-right: 45px;
	}

	.interview__videos {
		padding-left: 155px;
	}

	.interview__body {
		width: calc(100% - 160px);
	}

	.interview__interviewee {
	    border-radius: 70px;
	    width: 140px;
	}
	.interview__text {
		margin-left: 160px;
	}
}

